Fixed: wflow-consoleweb - Xadmin Theme - Elements in filter side panel on smaller screens not properly aligned @8.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/form.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/form.css
@@ -268,7 +268,6 @@ body .editor-cell select:not([class^=ui]){
     color: inherit;
     background-color: #fff;
     border-radius: 2px;
-    float: left;
 }
 body input[disabled],
 body input[readonly] {
